# circular_backend

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  README.md  circular-backend-api.postman_collection.json  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/dto/: circular_dto.py  search_result_dto.py
db/: __init__.py  client.py
docker/: docker_run.txt
docs/: rag-ingestion-flow.excalidraw  rag-retrieval-flow.excalidraw
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
ingestion/: __init__.py  logging_utils.py
ingestion/dto/: action_item_dto.py  circular_dto.py  circular_reference_dto.py
ingestion/indexer/: __init__.py  chunker.py  contextualizer.py  dto.py  embedding_provider.py  es_client.py  es_provider.py  indexer.py  pdf_extractor.py  runner.py
ingestion/processor/: action_item_extractor.py  base.py  circular_reference_extractor.py  pipeline.py  runner.py
ingestion/repository/: __init__.py  action_item_repository.py  circular_reference_repository.py  circular_repository.py  postgres_schema.sql  processor_repository.py
processor/: action_item_extractor.py
systemdocs/: elasticsearch_indexer.md  scrapper.md  scrapper_failed
tests/: download_model.py  fakes.py  test_app.py  test_circular_repository.py  test_contextualizer.py  test_db_client.py  test_es_client.py  test_es_client_rrf.py  test_indexer.py  test_indexer_runner.py  test_nse_scraper.py  test_orchestrator.py  test_runner.py  test_sebi_scraper.py
utils/: __init__.py  llm_client.py  utils.py
(+47 files in other folders)
