[project]
name = "circular-backend"
version = "0.1.0"
description = "Starter Flask backend project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.1.0",
    "python-dotenv==1.0.1",
    "psycopg[binary]==3.2.9",
    "psycopg-pool==3.2.2",
    "elasticsearch>=8.0.0",
    "pypdf>=5.0.0",
]

[project.scripts]
run-scrapper = "ingestion.scrapper.runner:main"
run-indexer = "ingestion.indexer.runner:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "run"]
packages = [
    "app",
    "db",
    "ingestion",
    "ingestion.indexer",
    "ingestion.repository",
    "ingestion.scrapper",
    "ingestion.scrapper.sources",
]

[tool.pytest.ini_options]
pythonpath = ["."]
